Fix z-index issues
- replace z-index with sass variable
- add safari hack (transform translate3d to deal with safari scroll z-index bug)
- introduce new z-index position over sticky elements but behind the navbar

--- a/src/resources/formats/html/_quarto-rules.scss
+++ b/src/resources/formats/html/_quarto-rules.scss
@@ -164,6 +164,10 @@ h6:hover > .anchorjs-link,
   }
 }
 
+#TOC {
+  z-index: $zindex-sticky;
+}
+
 #quarto-sidebar > *,
 #TOC > * {
   transition: opacity 0.25s ease-in-out;
