--- a/src/resources/formats/html/bootstrap/_bootstrap-variables.scss
+++ b/src/resources/formats/html/bootstrap/_bootstrap-variables.scss
@@ -116,3 +116,5 @@ $enable-grid-classes: false;
 $enable-cssgrid: true;
 $grid-gutter-width: 0;
 $grid-columns: 24;
+
+$zindex-content: 1025;
